[gd_scene load_steps=5 format=3 uid="uid://cr0fsa65v7ti7"]

[ext_resource type="Texture2D" uid="uid://tyyffk8n4tjk" path="res://Objects/PauseButton/PauseButton.png" id="1_ghn3f"]
[ext_resource type="Script" path="res://Objects/PauseButton/pause_button.gd" id="1_ss4aa"]
[ext_resource type="Texture2D" uid="uid://bm7y3owmk22u0" path="res://Objects/PauseButton/PauseButtonHover.png" id="3_ro2as"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6pig"]

[node name="PauseButton" type="Node2D"]
script = ExtResource("1_ss4aa")

[node name="PauseButton" type="Sprite2D" parent="."]
texture = ExtResource("1_ghn3f")

[node name="PauseButtonHover" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_ro2as")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_j6pig")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
